--- a/content/blog/2017-05-30-geofacet_ldn_pubs.Rmd
+++ b/content/blog/2017-05-30-geofacet_ldn_pubs.Rmd
@@ -104,7 +104,7 @@ Ready to plot. All we need to do is call `facet_geo` in the same way we might ha
 
 Here's my first effort:
 
-```{r geofacet, fig.height=5, fig.width=7}
+```{r geofacet, fig.width = 10, fig.height = 10}
 
 # geofaceted plot of year-on-year pubs % change 
 ggplot(data = pubs, aes(x=year, y=yoy_chg, fill=yoy_chg)) +
