--- a/public/blog/2017-05-30-geofacet_ldn_pubs.Rmd
+++ b/public/blog/2017-05-30-geofacet_ldn_pubs.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE, out.width =
 
 ## Introducing geofacet
 
-The [`geofacet`](https://github.com/hafen/geofacet) package dropped recently (I want to say last week?), a `ggplot2` extension allowing for the user to facet plots in a way that can retain an underlying geographical dimension. It perhaps goes a little bit further towards abstraction than [tilegrams](https://pitchinteractiveinc.github.io/tilegrams/), but the visualizations we produce can be a bit more complex as well. This post documents my first foray into this packages functionality.
+The [`geofacet`](https://github.com/hafen/geofacet) package dropped recently (I want to say last week?), a `ggplot2` extension allowing for the user to facet plots in a way that can retain an underlying geographical dimension. It perhaps goes a little bit further towards abstraction than [tilegrams](https://pitchinteractiveinc.github.io/tilegrams/), but the visualizations we produce can be a bit more complex as well. This post documents my first foray into this packages functionality.[^fullcode]
 
 <br>
 
@@ -46,8 +46,9 @@ A couple of months ago, [a dataset was published](https://data.london.gov.uk/dat
 
 Below is a map of London's boroughs, in case you aren't familiar.
 
-![](http://www.resizr.com/resized/779b.png)
-
+```{r echo = FALSE, out.width = "100%", fig.align = "center"}
+knitr::include_graphics("/img/2017-05-30-geofacet_ldn_pubs/boroughs.png")
+```
 <br>
 
 With that cleared up, let's load up this data and get it into shape.
@@ -128,3 +129,8 @@ ggplot(data = pubs, aes(x=year, y=yoy_chg, fill=yoy_chg)) +
 ## Close
 
 As the package author, [Ryan Hafen accepts](https://twitter.com/hafenstats/status/869621852385165312) that some of these plot's readability does rely on some pre-existing knowledge of the underlying geography (Ryan also says to watch out for some ideas to deal with this). Bearing this in mind, there are opportunities to make eye-catching plots on the occasions when this assumption holds (see [this New York Times example](https://www.nytimes.com/2017/05/25/opinion/sunday/the-assault-on-colleges-and-the-american-dream.html)). I reckon I'm gonna have fun with it...
+
+<br>
+
+
+[^fullcode]: To keep the post concise I don't show all of the code, especially code that generates figures. But you can find the full code [here](https://github.com/rbind/ewenme/blob/master/content/blog/2017-05-30-geofacet_ldn_pubs.Rmd).
