--- a/content/about/index.Rmd
+++ b/content/about/index.Rmd
@@ -20,14 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Analyst / R Developer and data science hopeful. I'm interested in sharing and supporting opinionated analysis, adventures in R and humane, ethical applications of machine learning.
 
-### Projects
-
-* [fplR](https://ewenme.github.io/fplR/): R package for working with Fantasy Premier League (FPL) data
-* [Vinylspotting](https://ewenme.shinyapps.io/vinylspotting/): Shiny app for Discogs users to visualise and explore their record collections
-
-### Personal
-
-I'm a collector/selector of dusty records and a player/admirer of The Beautiful Game&trade;. Also, please hit me up with your fire veggie recipes.
+I'm also a collector/selector of dusty records and a player/admirer of The Beautiful Game&trade;. Please hit me up with your fire veggie recipes, too.
 
 ```{r,  echo = FALSE, message = FALSE, fig.align = "center", out.width = "90%"}
 library(magick)
